Notification Fix: The displayed time shown in the notification is now corrected to the _Event's time, instead of the alarm time. -------------------------------------- Middle of: EditAgenda UI Update